--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -2,8 +2,8 @@
 - name: 创建docker目录包
   file: dest={{ item }} state=directory
   with_items: 
-  - {{data_k8s_dir}}
-  - {{docker_data_dir}}
+  - "{{data_k8s_dir}}"
+  - "{{docker_data_dir}}"
 
 
 - name: 卸载docker-rpm包
