--- a/single-master-deploy.yml
+++ b/single-master-deploy.yml
@@ -43,7 +43,14 @@
     - node
   tags: node
 
-- name: 6.部署插件
+- name: 6.批准kubelet-csr请求
+  gather_facts: false
+  hosts: master1
+  roles:
+    - csr
+  tags: csr
+
+- name: 7.部署插件
   gather_facts: false
   hosts: master1
   roles:
